All fractal data is read from file Points are generated and has to be printed to bmp file

--- a/PGK-Project/PGK-Project.vcxproj
+++ b/PGK-Project/PGK-Project.vcxproj
@@ -32,6 +32,9 @@
     <ClInclude Include="MainFrame.h" />
     <ClInclude Include="TransformationSetup.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="example.txt" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E251C433-8005-4A29-89CA-949A41157B3D}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
